[done] Format the ref

--- a/ref.bib
+++ b/ref.bib
@@ -371,11 +371,11 @@
 
 % expected improvement
 @article{jones1998efficient,
-  title     = {Efficient global optimization of expensive black-box functions},
-  author    = {DR. Jones and M. Schonlau and WJ. Welch},
-  journal   = {Journal of Global Optimization},
-  volume    = {13},
-  year      = {1998},
+  title   = {Efficient global optimization of expensive black-box functions},
+  author  = {DR. Jones and M. Schonlau and WJ. Welch},
+  journal = {Journal of Global Optimization},
+  volume  = {13},
+  year    = {1998}
 }
 
 % thompson sampling tutorial
@@ -388,11 +388,11 @@
 
 % thompson sampling: original
 @article{thompson1933likelihood,
-  title     = {On the likelihood that one unknown probability exceeds another in view of the evidence of two samples},
-  author    = {WR. Thompson},
-  journal   = {Biometrika},
-  volume    = {25},
-  year      = {1933},
+  title   = {On the likelihood that one unknown probability exceeds another in view of the evidence of two samples},
+  author  = {WR. Thompson},
+  journal = {Biometrika},
+  volume  = {25},
+  year    = {1933}
 }
 
 % probablity improvement
@@ -445,10 +445,10 @@
 
 % entropy search (recent variant)
 @inproceedings{wang2017max,
-  title        = {Max-value entropy search for efficient {Bayesian} optimization},
-  author       = {Z. Wang and S. Jegelka},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2017},
+  title     = {Max-value entropy search for efficient {Bayesian} optimization},
+  author    = {Z. Wang and S. Jegelka},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2017}
 }
 
 % entropy search: summary
@@ -477,10 +477,10 @@
 
 % conditional kernel
 @inproceedings{levesque2017bayesian,
-  title        = {{Bayesian} optimization for conditional hyperparameter spaces},
-  author       = {JC. L{\'e}vesque and A. Durand and C. Gagn{\'e} and R. Sabourin},
-  booktitle    = {International Joint Conference on Neural Networks},
-  year         = {2017},
+  title     = {{Bayesian} optimization for conditional hyperparameter spaces},
+  author    = {JC. L{\'e}vesque and A. Durand and C. Gagn{\'e} and R. Sabourin},
+  booktitle = {International Joint Conference on Neural Networks},
+  year      = {2017}
 }
 
 % conditional kernel
@@ -493,10 +493,10 @@
 
 % conditional kernel
 @inproceedings{jenatton2017bayesian,
-  title        = {{Bayesian} optimization with tree-structured dependencies},
-  author       = {R. Jenatton and C. Archambeau and J. Gonz{\'a}lez and M. Seeger},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2017},
+  title     = {{Bayesian} optimization with tree-structured dependencies},
+  author    = {R. Jenatton and C. Archambeau and J. Gonz{\'a}lez and M. Seeger},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2017}
 }
 
 % high dimensional Bayesian optimization by random embedding
@@ -510,10 +510,10 @@
 
 % high dimensional Bayesian optimization by additive models
 @inproceedings{kandasamy2015high,
-  title        = {High dimensional {Bayesian} optimisation and bandits via additive models},
-  author       = {K. Kandasamy and J. Schneider and B. P{\'o}czos},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2015},
+  title     = {High dimensional {Bayesian} optimisation and bandits via additive models},
+  author    = {K. Kandasamy and J. Schneider and B. P{\'o}czos},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2015}
 }
 
 % parallel Bayesian optimization
@@ -579,11 +579,11 @@
 
 % BO with noisy experiments
 @article{letham2019constrained,
-  title     = {Constrained {Bayesian} optimization with noisy experiments},
-  author    = {B. Letham and B. Karrer and G. Ottoni and E. Bakshy},
-  journal   = {Bayesian Analysis},
-  volume    = {14},
-  year      = {2019},
+  title   = {Constrained {Bayesian} optimization with noisy experiments},
+  author  = {B. Letham and B. Karrer and G. Ottoni and E. Bakshy},
+  journal = {Bayesian Analysis},
+  volume  = {14},
+  year    = {2019}
 }
 
 % kernel chemical structure
@@ -843,7 +843,7 @@
 @inproceedings{thornton2013auto,
   title     = {{Auto-WEKA}: Combined selection and hyperparameter optimization of classification algorithms},
   author    = {Thornton, Chris and F. Hutter and H. Hoos H and K. Leyton-Brown},
-  booktitle = {Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle = {International Conference on Knowledge Discovery \& Data Mining},
   pages     = {847--855},
   year      = {2013}
 }
@@ -1108,18 +1108,18 @@
 
 % one-shot, parameter sharing, ENAS
 @inproceedings{pham2018efficient,
-  title        = {Efficient neural architecture search via parameters sharing},
-  author       = {H. Pham and M. Guan and B. Zoph and Q. Le and J. Dean},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2018},
+  title     = {Efficient neural architecture search via parameters sharing},
+  author    = {H. Pham and M. Guan and B. Zoph and Q. Le and J. Dean},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2018}
 }
 
 % one-shot, parameter sharing, droppath
 @inproceedings{bender2018understanding,
-  title        = {Understanding and simplifying one-shot architecture search},
-  author       = {G. Bender and PJ. Kindermans and B. Zoph and V. Vasudevan and Q. Le},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2018},
+  title     = {Understanding and simplifying one-shot architecture search},
+  author    = {G. Bender and PJ. Kindermans and B. Zoph and V. Vasudevan and Q. Le},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2018}
 }
 
 % DARTS
@@ -1140,10 +1140,10 @@
 
 % DARTS with adversarial training
 @inproceedings{chen2020stabilizing,
-  title        = {Stabilizing differentiable architecture search via perturbation-based regularization},
-  author       = {X. Chen and CJ. Hsieh},
-  booktitle    = {International Conference on Machine Learning},
-  year         = {2020},
+  title     = {Stabilizing differentiable architecture search via perturbation-based regularization},
+  author    = {X. Chen and CJ. Hsieh},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2020}
 }
 
 % GDAS
@@ -1195,10 +1195,10 @@
 
 % random search with weight sharing
 @inproceedings{li2020random,
-  title        = {Random search and reproducibility for neural architecture search},
-  author       = {L. Li and A. Talwalkar},
-  booktitle    = {Uncertainty in Artificial Intelligence},
-  year         = {2020},
+  title     = {Random search and reproducibility for neural architecture search},
+  author    = {L. Li and A. Talwalkar},
+  booktitle = {Uncertainty in Artificial Intelligence},
+  year      = {2020}
 }
 
 ####################################################
@@ -1265,10 +1265,10 @@
 
 % DAC for BB optimizer
 @inproceedings{shala2020learning,
-  title        = {Learning step-size adaptation in {CMA-ES}},
-  author       = {G. Shala and A. Biedenkapp and N. Awad and S. Adriaensen and M. Lindauer and F. Hutter},
-  booktitle    = {International Conference on Parallel Problem Solving from Nature},
-  year         = {2020},
+  title     = {Learning step-size adaptation in {CMA-ES}},
+  author    = {G. Shala and A. Biedenkapp and N. Awad and S. Adriaensen and M. Lindauer and F. Hutter},
+  booktitle = {International Conference on Parallel Problem Solving from Nature},
+  year      = {2020}
 }
 
 % L2L by gradient descent (L2L for LSTM)
@@ -1286,7 +1286,7 @@
 % various visualization
 @article{lindauer2019boah,
   title   = {{BOAH}: A tool suite for multi-fidelity {Bayesian} optimization \& analysis of hyperparameters},
-  author  = {M. Lindauer and K. Eggensperger and M. Feurer and A. Biedenkapp and J. Marben and M{\"u}ller, Philipp and F. Hutter},
+  author  = {M. Lindauer and K. Eggensperger and M. Feurer and A. Biedenkapp and J. Marben and P. M{\"u}ller and F. Hutter},
   journal = {arXiv:1908.06756},
   year    = {2019}
 }
@@ -1302,30 +1302,25 @@
 % parallel coordinate plot
 @inproceedings{golovin2017google,
   title     = {{Google Vizier}: A service for black-box optimization},
-  author    = {Golovin, Daniel and Solnik, Benjamin and Moitra, Subhodeep and Kochanski, Greg and Karro, John and Sculley, D},
-  booktitle = {Proceedings of the 23rd ACM SIGKDD international conference on knowledge discovery and data mining},
-  pages     = {1487--1495},
+  author    = {D. Golovin and B. Solnik and S. Moitra and G. Kochanski and J. Karro and D. Sculley},
+  booktitle = {International Conference on Knowledge Discovery \& Data Mining},
   year      = {2017}
 }
 
 % various visualization, local hyperparameter importance
 @inproceedings{biedenkapp2018cave,
-  title        = {{CAVE}: Configuration assessment, visualization and evaluation},
-  author       = {A. Biedenkapp and J. Marben and M. Lindauer and F. Hutter},
-  booktitle    = {International Conference on Learning and Intelligent Optimization},
-  pages        = {115--130},
-  year         = {2018},
-  organization = {Springer}
+  title     = {{CAVE}: Configuration assessment, visualization and evaluation},
+  author    = {A. Biedenkapp and J. Marben and M. Lindauer and F. Hutter},
+  booktitle = {International Conference on Learning and Intelligent Optimization},
+  year      = {2018}
 }
 
 % forward selection of hyperparameters for hyperparameter importance
 @inproceedings{hutter2013identifying,
-  title        = {Identifying key algorithm parameters and instance features using forward selection},
-  author       = {F. Hutter and H. Hoos H and K. Leyton-Brown},
-  booktitle    = {International Conference on Learning and Intelligent Optimization},
-  pages        = {364--381},
-  year         = {2013},
-  organization = {Springer}
+  title     = {Identifying key algorithm parameters and instance features using forward selection},
+  author    = {F. Hutter and H. Hoos H and K. Leyton-Brown},
+  booktitle = {International Conference on Learning and Intelligent Optimization},
+  year      = {2013}
 }
 
 % ablation study
@@ -1333,21 +1328,16 @@
   title     = {Efficient parameter importance analysis via ablation with surrogates},
   author    = {A. Biedenkapp and M. Lindauer and K. Eggensperger and F. Hutter and C. Fawcett and H. Hoos},
   booktitle = {AAAI Conference on Artificial Intelligence},
-  volume    = {31},
-  number    = {1},
   year      = {2017}
 }
 
 % ablation study: original paper
 @article{fawcett2016analysing,
-  title     = {Analysing differences between algorithm configurations through ablation},
-  author    = {C. Fawcett and H. Hoos H},
-  journal   = {Journal of Heuristics},
-  volume    = {22},
-  number    = {4},
-  pages     = {431--458},
-  year      = {2016},
-  publisher = {Springer}
+  title   = {Analysing differences between algorithm configurations through ablation},
+  author  = {C. Fawcett and H. Hoos H},
+  journal = {Journal of Heuristics},
+  volume  = {22},
+  year    = {2016}
 }
 
 % global hyperparameter importance
