--- a/ref.bib
+++ b/ref.bib
@@ -32,7 +32,7 @@
 
 % performance differences
 @inproceedings{strang2018don,
-  title     = {Don’t rule out simple models prematurely: a large scale benchmark comparing linear and non-linear classifiers in {OpenML}},
+  title     = {Don't rule out simple models prematurely: a large scale benchmark comparing linear and non-linear classifiers in {OpenML}},
   author    = {B. Strang and P. van der Putten and JN. van Rijn and F. Hutter},
   booktitle = {International Symposium on Intelligent Data Analysis},
   year      = {2018}
@@ -134,7 +134,6 @@
   author  = {J. Bergstra and Y. Bengio},
   journal = {Journal of Machine Learning Research},
   volume  = {13},
-  number  = {2},
   year    = {2012}
 }
 
@@ -620,39 +619,31 @@
   title   = {Scalable meta-learning for {Bayesian} optimization},
   author  = {M. Feurer and B. Letham and E. Bakshy},
   journal = {AutoML Workshop at International Conference on Machine Learning},
-  volume  = {1050},
-  pages   = {6},
   year    = {2018}
 }
 
 % task-independent recommendation
 @article{abdulrahman2018speeding,
-  title     = {Speeding up algorithm selection using average ranking and active testing by introducing runtime},
-  author    = {Abdulrahman, Salisu Mamman and Brazdil, Pavel and JN. van Rijn and Vanschoren, Joaquin},
-  journal   = {Machine learning},
-  volume    = {107},
-  number    = {1},
-  pages     = {79--108},
-  year      = {2018},
-  publisher = {Springer}
+  title   = {Speeding up algorithm selection using average ranking and active testing by introducing runtime},
+  author  = {SM. Abdulrahman and P. Brazdil and JN. van Rijn and J. Vanschoren},
+  journal = {Machine Learning},
+  volume  = {107},
+  year    = {2018}
 }
 
 % task-independent recommendation
 @article{wistuba2018scalable,
-  title     = {Scalable {Gaussian} process-based transfer surrogates for hyperparameter optimization},
-  author    = {M. Wistuba and N. Schilling and L. Schmidt-Thieme},
-  journal   = {Machine Learning},
-  volume    = {107},
-  number    = {1},
-  pages     = {43--78},
-  year      = {2018},
-  publisher = {Springer}
+  title   = {Scalable {Gaussian} process-based transfer surrogates for hyperparameter optimization},
+  author  = {M. Wistuba and N. Schilling and L. Schmidt-Thieme},
+  journal = {Machine Learning},
+  volume  = {107},
+  year    = {2018}
 }
 
 % task-independent recommendation, meta learn for large scale HPO
 @article{feurer2018practical,
   title   = {Practical Transfer Learning for {Bayesian} Optimization},
-  author  = {M. Feurer and B. Letham and F. Hutter and Bakshy, Eytan},
+  author  = {M. Feurer and B. Letham and F. Hutter and E. Bakshy},
   journal = {arXiv:1802.02219},
   year    = {2018}
 }
@@ -660,17 +651,17 @@
 % warm-start CMA-ES
 @article{nomura2020warm,
   title   = {Warm Starting {CMA-ES} for Hyperparameter Optimization},
-  author  = {Nomura, Masahiro and Watanabe, Shuhei and Akimoto, Youhei and Ozaki, Yoshihiko and Onishi, Masaki},
+  author  = {M. Nomura and S. Watanabe and Y. Akimoto and Y. Ozaki and M. Onishi},
   journal = {arXiv:2012.06932},
   year    = {2020}
 }
 
 % multi-task bayesian optimization
 @article{swersky2013multi,
-  title     = {Multi-task {Bayesian} optimization},
-  author    = {K. Swersky and J. Snoek and RP. Adams},
-  year      = {2013},
-  publisher = {Curran Associates, Inc}
+  title   = {Multi-task {Bayesian} optimization},
+  author  = {K. Swersky and J. Snoek and RP. Adams},
+  journal = {Advances in Neural Information Processing Systems},
+  year    = {2013}
 }
 
 % multi-task gaussian process
@@ -678,75 +669,62 @@
   title   = {Multi-task {Gaussian} process prediction},
   author  = {Williams, Chris and Bonilla, Edwin V and Chai, Kian M},
   journal = {Advances in Neural Information Processing Systems},
-  pages   = {153--160},
   year    = {2007}
 }
 
 % joint optimization over multiple task using shared task latent representation
 @inproceedings{perrone2018scalable,
   title     = {Scalable hyperparameter transfer learning},
-  author    = {Perrone, Valerio and Jenatton, Rodolphe and M. Seeger and Archambeau, C{\'e}dric},
-  booktitle = {Proceedings of the 32nd International Conference on Neural Information Processing Systems},
-  pages     = {6846--6856},
+  author    = {V. Perrone and R. Jenatton and M. Seeger and C. Archambeau},
+  booktitle = {Advances in Neural Information Processing Systems},
   year      = {2018}
 }
 
 % FABOLAS, Entropy search, multi-fidelity bayesian optimization
 @inproceedings{klein2017fast,
-  title        = {Fast {Bayesian} optimization of machine learning hyperparameters on large datasets},
-  author       = {A. Klein and S. Falkner and Bartels, Simon and Hennig, Philipp and F. Hutter},
-  booktitle    = {International Conference on Artificial Intelligence and Statistics},
-  pages        = {528--536},
-  year         = {2017},
-  organization = {PMLR}
+  title     = {Fast {Bayesian} optimization of machine learning hyperparameters on large datasets},
+  author    = {A. Klein and S. Falkner and S. Bartels and P. Hennig and F. Hutter},
+  booktitle = {International Conference on Artificial Intelligence and Statistics},
+  year      = {2017}
 }
 
 % multi-fidelity bayesian optimization
 @inproceedings{kandasamy2017multi,
-  title        = {Multi-fidelity {Bayesian} optimisation with continuous approximations},
-  author       = {K. Kandasamy and Dasarathy, Gautam and J. Schneider and B. P{\'o}czos},
-  booktitle    = {International Conference on Machine Learning},
-  pages        = {1799--1808},
-  year         = {2017},
-  organization = {PMLR}
+  title     = {Multi-fidelity {Bayesian} optimisation with continuous approximations},
+  author    = {K. Kandasamy and G. Dasarathy and J. Schneider and B. P{\'o}czos},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2017}
 }
 
 % successive halving
 @inproceedings{jamieson2016non,
-  title        = {Non-stochastic best arm identification and hyperparameter optimization},
-  author       = {Jamieson, Kevin and Talwalkar, Ameet},
-  booktitle    = {International Conference on Artificial Intelligence and Statistics},
-  pages        = {240--248},
-  year         = {2016},
-  organization = {PMLR}
+  title     = {Non-stochastic best arm identification and hyperparameter optimization},
+  author    = {K. Jamieson and A. Talwalkar},
+  booktitle = {International Conference on Artificial Intelligence and Statistics},
+  year      = {2016}
 }
 
 % hyperband
 @article{li2017hyperband,
-  title     = {{HyperBand}: A novel bandit-based approach to hyperparameter optimization},
-  author    = {Li, Lisha and Jamieson, Kevin and DeSalvo, Giulia and Rostamizadeh, Afshin and Talwalkar, Ameet},
-  journal   = {Journal of Machine Learning Research},
-  volume    = {18},
-  number    = {1},
-  pages     = {6765--6816},
-  year      = {2017},
-  publisher = {JMLR. org}
+  title   = {{HyperBand}: A novel bandit-based approach to hyperparameter optimization},
+  author  = {L. Li and K. Jamieson and G. DeSalvo and A. Rostamizadeh and A. Talwalkar},
+  journal = {Journal of Machine Learning Research},
+  volume  = {18},
+  year    = {2017}
 }
 
 % BOHB
 @inproceedings{falkner2018bohb,
-  title        = {{BOHB}: Robust and efficient hyperparameter optimization at scale},
-  author       = {S. Falkner and A. Klein and F. Hutter},
-  booktitle    = {International Conference on Machine Learning},
-  pages        = {1437--1446},
-  year         = {2018},
-  organization = {PMLR}
+  title     = {{BOHB}: Robust and efficient hyperparameter optimization at scale},
+  author    = {S. Falkner and A. Klein and F. Hutter},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2018}
 }
 
 % learning of acquisition function
 @article{volpp2019meta,
   title   = {Meta-learning acquisition functions for transfer learning in {Bayesian} optimization},
-  author  = {Volpp, Michael and Fr{\"o}hlich, Lukas P and Fischer, Kirsten and Doerr, Andreas and S. Falkner and F. Hutter and Daniel, Christian},
+  author  = {M. Volpp and LP. Fr{\"o}hlich and K. Fischer and A. Doerr and S. Falkner and F. Hutter and C. Daniel},
   journal = {arXiv:1904.02642},
   year    = {2019}
 }
@@ -754,38 +732,33 @@
 % learning a black box optimization by gradient descent
 @inproceedings{andrychowicz2016learning,
   title     = {Learning to learn by gradient descent by gradient descent},
-  author    = {Andrychowicz, Marcin and Denil, Misha and Gomez, Sergio and Hoffman, Matthew W and Pfau, David and Schaul, Tom and Shillingford, Brendan and N. de Freitas},
+  author    = {M. Andrychowicz and M. Denil and S. Gomez and MW. Hoffman and D. Pfau and T. Schaul and B. Shillingford and N. de Freitas},
   booktitle = {Advances in Neural Information Processing Systems},
-  pages     = {3981--3989},
   year      = {2016}
 }
 
 % learning a black box optimization (acquisition function) by gradient descent
 @inproceedings{chen2017learning,
-  title        = {Learning to learn without gradient descent by gradient descent},
-  author       = {Y. Chen and Hoffman, Matthew W and Colmenarejo, Sergio G{\'o}mez and Denil, Misha and Lillicrap, Timothy P and Botvinick, Matt and Freitas, Nando},
-  booktitle    = {International Conference on Machine Learning},
-  pages        = {748--756},
-  year         = {2017},
-  organization = {PMLR}
+  title     = {Learning to learn without gradient descent by gradient descent},
+  author    = {Y. Chen and MW. Hoffman and SG. Colmenarejo and M. Denil and TP. Lillicrap and M. Botvinick and N. de Freitas},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2017}
 }
 
 % learning a black box optimization by reinforcement learning
 @article{li2016learning,
   title   = {Learning to optimize},
-  author  = {Li, Ke and Malik, Jitendra},
+  author  = {K. Li and J. Malik},
   journal = {arXiv:1606.01885},
   year    = {2016}
 }
 
 % learning curve prediction by simple model
 @inproceedings{chandrashekaran2017speeding,
-  title        = {Speeding up hyper-parameter optimization by extrapolation of learning curves using previous builds},
-  author       = {Chandrashekaran, Akshay and Lane, Ian R},
-  booktitle    = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
-  pages        = {477--492},
-  year         = {2017},
-  organization = {Springer}
+  title     = {Speeding up hyper-parameter optimization by extrapolation of learning curves using previous builds},
+  author    = {A. Chandrashekaran and IR. Lane},
+  booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  year      = {2017}
 }
 
 % learning curve prediction using neural network
@@ -798,7 +771,7 @@
 % learning curve prediction by parametric non-linear regression
 @inproceedings{domhan2015speeding,
   title     = {Speeding up automatic hyperparameter optimization of deep neural networks by extrapolation of learning curves},
-  author    = {Domhan, Tobias and JT. Springenberg and F. Hutter},
+  author    = {T. Domhan and JT. Springenberg and F. Hutter},
   booktitle = {International Joint Conference on Artificial Intelligence},
   year      = {2015}
 }
@@ -806,7 +779,7 @@
 % learning curve prediction using a kernel for budgeting
 @article{swersky2014freeze,
   title   = {Freeze-thaw {Bayesian} optimization},
-  author  = {K. Swersky and J. Snoek and Adams, Ryan Prescott},
+  author  = {K. Swersky and J. Snoek and RP. Adams},
   journal = {arXiv:1406.3896},
   year    = {2014}
 }
@@ -832,19 +805,16 @@
 % meta-learn for auto-sklearn
 @inproceedings{feurer2015initializing,
   title     = {Initializing {Bayesian} hyperparameter optimization via meta-learning},
-  author    = {M. Feurer and Springenberg, Jost and F. Hutter},
+  author    = {M. Feurer and JT. Springenberg and F. Hutter},
   booktitle = {AAAI Conference on Artificial Intelligence},
-  volume    = {29},
-  number    = {1},
   year      = {2015}
 }
 
 % Auto-weka
 @inproceedings{thornton2013auto,
   title     = {{Auto-WEKA}: Combined selection and hyperparameter optimization of classification algorithms},
-  author    = {Thornton, Chris and F. Hutter and H. Hoos H and K. Leyton-Brown},
+  author    = {C. Thornton and F. Hutter and H. Hoos H and K. Leyton-Brown},
   booktitle = {International Conference on Knowledge Discovery \& Data Mining},
-  pages     = {847--855},
   year      = {2013}
 }
 
@@ -854,87 +824,69 @@
 % HPO joinly with feature selection
 @inproceedings{binder2020multi,
   title     = {Multi-objective hyperparameter tuning and feature selection using filter ensembles},
-  author    = {Binder, Martin and Moosbauer, Julia and Thomas, Janek and Bischl, Bernd},
-  booktitle = {Proceedings of the 2020 Genetic and Evolutionary Computation Conference},
-  pages     = {471--479},
+  author    = {M. Binder and J. Moosbauer and J. Thomas and B. Bischl},
+  booktitle = {Genetic and Evolutionary Computation Conference},
   year      = {2020}
 }
 
 % SMS-EMOA
 @article{beume2007sms,
-  title     = {{SMS-EMOA}: Multiobjective selection based on dominated hypervolume},
-  author    = {Beume, Nicola and Naujoks, Boris and Emmerich, Michael},
-  journal   = {European Journal of Operational Research},
-  volume    = {181},
-  number    = {3},
-  pages     = {1653--1669},
-  year      = {2007},
-  publisher = {Elsevier}
+  title   = {{SMS-EMOA}: Multiobjective selection based on dominated hypervolume},
+  author  = {N. Beume and B. Naujoks and M. Emmerich},
+  journal = {European Journal of Operational Research},
+  volume  = {181},
+  year    = {2007}
 }
 
 % NSGA-II
 @article{deb2002fast,
-  title     = {A fast and elitist multiobjective genetic algorithm: {NSGA-II}},
-  author    = {K. Deb and Pratap, Amrit and Agarwal, Sameer and Meyarivan, TAMT},
-  journal   = {IEEE transactions on evolutionary computation},
-  volume    = {6},
-  number    = {2},
-  pages     = {182--197},
-  year      = {2002},
-  publisher = {IEEE}
+  title   = {A fast and elitist multiobjective genetic algorithm: {NSGA-II}},
+  author  = {K. Deb and A. Pratap and S. Agarwal and T. Meyarivan},
+  journal = {Evolutionary Computation},
+  volume  = {6},
+  year    = {2002}
 }
 
 % Non-dominated sorting: O(DN log N) ~ O(DN^2)
 @article{xue2020setnds,
-  title     = {{SETNDS}: A {SET}-Based {N}on-{D}ominated Sorting Algorithm for Multi-Objective Optimization Problems},
-  author    = {Xue, Lingling and Zeng, Peng and Yu, Haibin},
-  journal   = {Applied Sciences},
-  volume    = {10},
-  number    = {19},
-  pages     = {6858},
-  year      = {2020},
-  publisher = {Multidisciplinary Digital Publishing Institute}
+  title   = {{SETNDS}: A {SET}-Based {N}on-{D}ominated Sorting Algorithm for Multi-Objective Optimization Problems},
+  author  = {L. Xue and P. Zeng and H. Yu},
+  journal = {Applied Sciences},
+  volume  = {10},
+  year    = {2020}
 }
 
 % ParEGO (scalarization of metrics)
 @article{knowles2006parego,
-  title     = {{ParEGO}: A hybrid algorithm with on-line landscape approximation for expensive multiobjective optimization problems},
-  author    = {Knowles, Joshua},
-  journal   = {IEEE Transactions on Evolutionary Computation},
-  volume    = {10},
-  number    = {1},
-  pages     = {50--66},
-  year      = {2006},
-  publisher = {IEEE}
+  title   = {{ParEGO}: A hybrid algorithm with on-line landscape approximation for expensive multiobjective optimization problems},
+  author  = {J. Knowles},
+  journal = {Evolutionary Computation},
+  volume  = {10},
+  year    = {2006}
 }
 
 % SMS-EGO
 @inproceedings{ponweiser2008multiobjective,
-  title        = {Multiobjective optimization on a limited budget of evaluations using model-assisted {S}-metric selection},
-  author       = {Ponweiser, Wolfgang and Wagner, Tobias and Biermann, Dirk and Vincze, Markus},
-  booktitle    = {International Conference on Parallel Problem Solving from Nature},
-  pages        = {784--794},
-  year         = {2008},
-  organization = {Springer}
+  title     = {Multiobjective optimization on a limited budget of evaluations using model-assisted {S}-metric selection},
+  author    = {W. Ponweiser and T. Wagner and D. Biermann and M. Vincze},
+  booktitle = {International Conference on Parallel Problem Solving from Nature},
+  year      = {2008}
 }
 
 % Expected hypervolume improvement
 @article{yang2019multi,
-  title     = {Multi-objective {Bayesian} global optimization using expected hypervolume improvement gradient},
-  author    = {Yang, Kaifeng and Emmerich, Michael and Deutz, Andr{\'e} and B{\"a}ck, Thomas},
-  journal   = {Swarm and evolutionary computation},
-  volume    = {44},
-  pages     = {945--956},
-  year      = {2019},
-  publisher = {Elsevier}
+  title   = {Multi-objective {Bayesian} global optimization using expected hypervolume improvement gradient},
+  author  = {K. Yang and M. Emmerich and A. Deutz and T. B{\"a}ck},
+  journal = {Swarm and Evolutionary Computation},
+  volume  = {44},
+  year    = {2019}
 }
 
 % multi-objective TPE
 @inproceedings{ozaki2020multiobjective,
   title     = {Multiobjective tree-structured {Parzen} estimator for computationally expensive optimization problems},
-  author    = {Ozaki, Yoshihiko and Tanigaki, Yuki and Watanabe, Shuhei and Onishi, Masaki},
-  booktitle = {Proceedings of the 2020 Genetic and Evolutionary Computation Conference},
-  pages     = {533--541},
+  author    = {Y. Ozaki and Y. Tanigaki and S. Watanabe and M. Onishi},
+  booktitle = {Genetic and Evolutionary Computation Conference},
   year      = {2020}
 }
 
@@ -947,25 +899,21 @@
   author  = {M. Lindauer and F. Hutter},
   journal = {Journal of Machine Learning Research},
   volume  = {21},
-  number  = {243},
-  pages   = {1--18},
   year    = {2020}
 }
 
 % Network morphism: original paper
 @inproceedings{wei2016network,
   title        = {Network morphism},
-  author       = {Wei, Tao and Wang, Changhu and Rui, Yong and Chen, Chang Wen},
+  author       = {T. Wei and C. Wang and Y. Rui and CW. Chen},
   booktitle    = {International Conference on Machine Learning},
-  pages        = {564--572},
   year         = {2016},
-  organization = {PMLR}
 }
 
 % Auto-pytorch: first version
 @inproceedings{mendoza2016towards,
   title     = {Towards automatically-tuned neural networks},
-  author    = {Mendoza, Hector and A. Klein and M. Feurer and JT. Springenberg and F. Hutter},
+  author    = {H. Mendoza and A. Klein and M. Feurer and JT. Springenberg and F. Hutter},
   booktitle = {AutoML Workshop at International Conference on Machine Learning},
   year      = {2016}
 }
@@ -981,17 +929,15 @@
 % NAS-bench101
 @inproceedings{ying2019bench,
   title        = {{NAS-Bench-101}: Towards reproducible neural architecture search},
-  author       = {C. Ying and A. Klein and Christiansen, Eric and Real, Esteban and Murphy, Kevin and F. Hutter},
+  author       = {C. Ying and A. Klein and E. Christiansen and E. Real and K. Murphy and F. Hutter},
   booktitle    = {International Conference on Machine Learning},
-  pages        = {7105--7114},
   year         = {2019},
-  organization = {PMLR}
 }
 
 % NAS-Bench201
 @article{dong2020bench,
   title   = {{NAS-Bench-201}: Extending the scope of reproducible neural architecture search},
-  author  = {Dong, Xuanyi and Yang, Yi},
+  author  = {X. Dong and Y. Yang},
   journal = {arXiv:2001.00326},
   year    = {2020}
 }
@@ -999,7 +945,7 @@
 % NAS-Bench301
 @article{siems2020bench,
   title   = {{NAS-Bench-301} and the case for surrogate benchmarks for neural architecture search},
-  author  = {J. Siems and L. Zimmer and A. Zela and Lukasik, Jovita and Keuper, Margret and F. Hutter},
+  author  = {J. Siems and L. Zimmer and A. Zela and J. Lukasik and M. Keuper and F. Hutter},
   journal = {arXiv:2008.09777},
   year    = {2020}
 }
@@ -1015,28 +961,24 @@
 % NAS survey (components)
 @article{elsken2019neural,
   title     = {Neural architecture search: A survey},
-  author    = {T. Elsken and Metzen, Jan Hendrik and F. Hutter},
+  author    = {T. Elsken and JH. Metzen and F. Hutter},
   journal   = {Journal of Machine Learning Research},
   volume    = {20},
-  number    = {1},
-  pages     = {1997--2017},
   year      = {2019},
-  publisher = {JMLR. org}
 }
 
 % cell search space
 @inproceedings{zoph2018learning,
   title     = {Learning transferable architectures for scalable image recognition},
-  author    = {Zoph, Barret and Vasudevan, Vijay and Shlens, Jonathon and Le, Quoc V},
-  booktitle = {Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages     = {8697--8710},
+  author    = {B. Zoph and V. Vasudevan and J. Shlens and QV. Le},
+  booktitle = {Conference on Computer Vision and Pattern Recognition},
   year      = {2018}
 }
 
 % hierarchical search space
 @article{liu2017hierarchical,
   title   = {Hierarchical representations for efficient architecture search},
-  author  = {Liu, Hanxiao and Simonyan, Karen and Vinyals, Oriol and Fernando, Chrisantha and Kavukcuoglu, Koray},
+  author  = {H. Liu and K. Simonyan and O. Vinyals and C. Fernando and K. Kavukcuoglu},
   journal = {arXiv:1711.00436},
   year    = {2017}
 }
@@ -1045,14 +987,14 @@
 % Arc kernel
 @article{swersky2014raiders,
   title   = {Raiders of the lost architecture: Kernels for {Bayesian} optimization in conditional parameter spaces},
-  author  = {K. Swersky and Duvenaud, David and J. Snoek and F. Hutter and MA. Osborne},
+  author  = {K. Swersky and D. Duvenaud and J. Snoek and F. Hutter and MA. Osborne},
   journal = {arXiv:1409.4011},
   year    = {2014}
 }
 % NASBOT
 @article{kandasamy2018neural,
   title   = {Neural architecture search with {Bayesian} optimisation and optimal transport},
-  author  = {K. Kandasamy and Neiswanger, Willie and J. Schneider and Poczos, Barnabas and Xing, Eric},
+  author  = {K. Kandasamy and W. Neiswanger and J. Schneider and B. Poczos and E. Xing},
   journal = {arXiv:1802.07191},
   year    = {2018}
 }
@@ -1060,7 +1002,7 @@
 % NAS with RL
 @article{zoph2016neural,
   title   = {Neural architecture search with reinforcement learning},
-  author  = {Zoph, Barret and Le, Quoc V},
+  author  = {B. Zoph and QV. Le},
   journal = {arXiv:1611.01578},
   year    = {2016}
 }
@@ -1068,7 +1010,7 @@
 % NAS with RE
 @inproceedings{real2019regularized,
   title     = {Regularized evolution for image classifier architecture search},
-  author    = {Real, Esteban and Aggarwal, Alok and Huang, Yanping and Le, Quoc V},
+  author    = {E. Real and A. Aggarwal and Y. Huang and QV. Le},
   booktitle = {AAAI Conference on Artificial Intelligence},
   year      = {2019}
 }
@@ -1085,8 +1027,7 @@
 @inproceedings{elsken2020meta,
   title     = {Meta-learning of neural architectures for few-shot learning},
   author    = {T. Elsken and B. Staffler and JH. Metzen and F. Hutter},
-  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
-  pages     = {12365--12375},
+  booktitle = {Conference on Computer Vision and Pattern Recognition},
   year      = {2020}
 }
 
