[fix] Add the solution to the page-breaking of hyperlink

--- a/submission.tex
+++ b/submission.tex
@@ -4,6 +4,7 @@
 
 \input{settings/preamble.tex}
 
+\hypersetup{draft}
 \begin{document}
 \input{settings/author-info.tex}
 \input{sections/abstract.tex}
