[refactor] Change the directory structure

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,6 +1,6 @@
 \input{settings/preamble.tex}
 
-\hypersetup{draft}
+% \hypersetup{draft} % <=== use it if you get page-breaking at hyperref issues
 \begin{document}
 
 \input{settings/labels-in-main.tex}
