Add the shortname citation command

--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -7,6 +7,8 @@
 }
 \makeatother
 
+\newcommand{\citewithname}[2]{#1 \textit{et al.} \shortcite{#2}}
+
 % argmin/argmax
 \newcommand{\argmin}{\mathop{\mathrm{argmin}}}
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
