Add the feat to generate label -> numbering and change the appendix numbering to alphabetic

--- a/settings/labels-in-main.tex
+++ b/settings/labels-in-main.tex
@@ -18,4 +18,9 @@
 \renewcommand\theequation{\arabic{equation}}
 \setcounter{equation}{4}  % start from 5
 
+% Change the numbering of sections to Alphabetic
+\renewcommand{\thesection}{\Alph{section}} 
+\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
+\renewcommand{\thesubsubsection}{\thesection.\arabic{subsection}.\arabic{subsubsection}}
+
 \fi
