Add page breaks for equations

--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -37,6 +37,8 @@
 
 \tcbuselibrary{breakable, skins, theorems}
 
+\allowdisplaybreaks
+
 % a mathematical statement that is proved using rigorous mathematical reasoning.
 % In a mathematical paper, the term theorem is often reserved for the most important results.
 \newtheorem{theorem}{Theorem}
