--- a/submission.tex
+++ b/submission.tex
@@ -9,6 +9,11 @@
 \input{settings/author-info.tex}
 \input{sections/abstract/main.tex}
 
+\begin{align}
+  f(x) &= x \displaybreak[0] \\
+  g(x) &= x^2
+\end{align}
+
 \input{sections/introduction/main.tex}
 \input{sections/related-work/main.tex}
 \input{sections/background/main.tex}
