--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -35,3 +35,8 @@
 \newcommand{\violet}[1]{\textcolor{violet}{#1}}
 \newcommand{\white}[1]{\textcolor{white}{#1}}
 \newcommand{\yellow}[1]{\textcolor{yellow}{#1}}
+
+\newcommand{\secref}[1]{Section~\ref{#1}}
+\renewcommand{\eqref}[1]{Eq.~(\ref{#1})}
+\newcommand{\figref}[1]{Figure~\ref{#1}}
+\newcommand{\tabref}[1]{Table~\ref{#1}}
