Change the indicator func from bb1 to bbI

--- a/settings/user-commands.tex
+++ b/settings/user-commands.tex
@@ -12,7 +12,7 @@
 % argmin/argmax
 \newcommand{\argmin}{\mathop{\mathrm{argmin}}}
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
-\newcommand{\indic}[1]{\mathbbm{1}[#1]}
+\newcommand{\indic}[1]{\mathbb{I}[#1]}
 \newcommand{\comb}[2]{{}_#1 \mathrm{C} _#2}
 \newcommand{\ceil}[1]{\lceil #1 \rceil}
 \newcommand{\floor}[1]{\lfloor #1 \rfloor}
